{
  "version": 4,
  "terraform_version": "1.16.3",
  "serial": 15,
  "lineage": "01c4d209-499b-acbe-738f-5126d5ea3d05",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01325b756807a4c4b",
            "arn": "arn:aws:ec2:ap-south-1:320900771424:elastic-ip/eipalloc-01325b756807a4c4b",
            "domain": "vpc",
            "id": "eipalloc-01325b756807a4c4b",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-13-202-65-236.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.202.65.236",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:320900771424:internet-gateway/igw-0b500e9c9b1410519",
            "id": "igw-0b500e9c9b1410519",
            "owner_id": "320900771424",
            "tags": {
              "Name": "prod-app-igw"
            },
            "tags_all": {
              "Name": "prod-app-igw"
            },
            "vpc_id": "vpc-051751e528c8ac6ee"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01325b756807a4c4b",
            "association_id": "eipassoc-0848870a96efe380a",
            "connectivity_type": "public",
            "id": "nat-0648b49044d7b9672",
            "network_interface_id": "eni-0db53684ddc72c2b1",
            "private_ip": "10.0.1.227",
            "public_ip": "13.202.65.236",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-024bc02fb6e67ec17",
            "tags": {
              "Name": "prod-app-nat-gw"
            },
            "tags_all": {
              "Name": "prod-app-nat-gw"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:320900771424:route-table/rtb-019eea9d6a05327a5",
            "id": "rtb-019eea9d6a05327a5",
            "owner_id": "320900771424",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0648b49044d7b9672",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "prod-app-private-rt"
            },
            "tags_all": {
              "Name": "prod-app-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-051751e528c8ac6ee"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:320900771424:route-table/rtb-0858bfe6e40c9ae36",
            "id": "rtb-0858bfe6e40c9ae36",
            "owner_id": "320900771424",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b500e9c9b1410519",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "prod-app-public-rt"
            },
            "tags_all": {
              "Name": "prod-app-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-051751e528c8ac6ee"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-016361e219a607461",
            "route_table_id": "rtb-019eea9d6a05327a5",
            "subnet_id": "subnet-04edf470105842aa4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-015f45ba14e7389fa",
            "route_table_id": "rtb-019eea9d6a05327a5",
            "subnet_id": "subnet-004741794b8e98fa3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a711f06e34099e7b",
            "route_table_id": "rtb-0858bfe6e40c9ae36",
            "subnet_id": "subnet-024bc02fb6e67ec17"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b5a7a3d486024fec",
            "route_table_id": "rtb-0858bfe6e40c9ae36",
            "subnet_id": "subnet-07ed23c2f1e990ca7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:320900771424:subnet/subnet-04edf470105842aa4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04edf470105842aa4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "320900771424",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prod-app-private-subnet-1"
            },
            "tags_all": {
              "Name": "prod-app-private-subnet-1"
            },
            "vpc_id": "vpc-051751e528c8ac6ee"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:320900771424:subnet/subnet-004741794b8e98fa3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-004741794b8e98fa3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "320900771424",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prod-app-private-subnet-2"
            },
            "tags_all": {
              "Name": "prod-app-private-subnet-2"
            },
            "vpc_id": "vpc-051751e528c8ac6ee"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:320900771424:subnet/subnet-024bc02fb6e67ec17",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-024bc02fb6e67ec17",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "320900771424",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prod-app-public-subnet-1"
            },
            "tags_all": {
              "Name": "prod-app-public-subnet-1"
            },
            "vpc_id": "vpc-051751e528c8ac6ee"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:320900771424:subnet/subnet-07ed23c2f1e990ca7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07ed23c2f1e990ca7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "320900771424",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prod-app-public-subnet-2"
            },
            "tags_all": {
              "Name": "prod-app-public-subnet-2"
            },
            "vpc_id": "vpc-051751e528c8ac6ee"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:320900771424:vpc/vpc-051751e528c8ac6ee",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0099244c5cbda8813",
            "default_route_table_id": "rtb-0f6c25eb5896d0b2a",
            "default_security_group_id": "sg-04e2bf387ebd35419",
            "dhcp_options_id": "dopt-0b0537bc2bcc5236c",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-051751e528c8ac6ee",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f6c25eb5896d0b2a",
            "owner_id": "320900771424",
            "tags": {
              "Name": "prod-app-vpc"
            },
            "tags_all": {
              "Name": "prod-app-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}